2010-10-19	The InnoDB Team

	* btr/btr0cur.c, buf/buf0buf.c, buf/buf0flu.c, handler/ha_innodb.cc,
	ibuf/ibuf0ibuf.c, include/btr0cur.h, include/buf0flu.h,
	include/ibuf0ibuf.h, include/row0mysql.h,
	row/row0mysql.c, row/row0sel.c,
	innodb_bug56680.test, innodb_bug56680.result:
	Fix Bug #56680 InnoDB may return wrong results from a
	case-insensitive covering index

2010-10-18	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h, innodb_bug57252.result,
	innodb_bug57252.test:
	Fix Bug#57252 disabling innobase_stats_on_metadata disables ANALYZE

2010-10-14	The InnoDB Team

	* handler/ha_innodb.cc, innodb_bug56143.result, innodb_bug56143.test:
	Fix Bug#56143 too many foreign keys causes output of show create
	table to become invalid

2010-10-14	The InnoDB Team

	* srv/srv0start.c:
	Fix Bug#57397 io_handler_thread() will never cleanup

2010-10-11	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#57345 btr_pcur_store_position abort for load with concurrent
	lock/unlock tables

2010-09-27	The InnoDB Team

	* row/row0sel.c, innodb_bug56716.result, innodb_bug56716.test:
	Fix Bug#56716 InnoDB locks a record gap without locking the table

2010-09-06	The InnoDB Team

	* dict/dict0load.c, innodb_bug53756.test innodb_bug53756.result:
	Fix Bug#53756 ALTER TABLE ADD PRIMARY KEY affects crash recovery

2010-08-24	The InnoDB Team

	* handler/ha_innodb.c, dict/dict0dict.c:
	Fix Bug#55832 selects crash too easily when innodb_force_recovery>3

2010-08-03	The InnoDB Team

	* include/dict0dict.h, include/dict0dict.ic, row/row0mysql.c:
	Fix bug #54678, InnoDB, TRUNCATE, ALTER, I_S SELECT, crash or deadlock

2010-08-03	The InnoDB Team

	* dict/dict0load.c, handler/ha_innodb.cc, include/db0err.h,
	include/dict0load.h, include/dict0mem.h, include/que0que.h,
	row/row0merge.c, row/row0mysql.c:
	Fix Bug#54582 stack overflow when opening many tables linked
	with foreign keys at once

2010-08-03	The InnoDB Team

	* include/ut0mem.h, ut/ut0mem.c: